==> AtherEnergy/asdk/platform/STM/stm32f4/dal/src/asdk_gpio.c <==
#include <stdlib.h>
#include "asdk_platform.h"
#include "asdk_mcu_pins.h" // Defines MCU pins as is
#include "asdk_gpio.h"     // ASDK GPIO APIs

asdk_errorcode_t asdk_gpio_init(asdk_gpio_config_t *gpio_cfg)
{
    // todo: perform static analysis

    asdk_errorcode_t ret_value = ASDK_GPIO_SUCCESS;
    const dal_pin_t *stm32f4_gpio = NULL;

	GPIO_InitTypeDef GPIO_Type = {.Alternate = 0, .Mode = 0, .Pin = 0,
									  .Pull = 0, .Speed = 0};

    /* validate configuration parameters */

    if (NULL == gpio_cfg)
    {
        return ASDK_GPIO_ERROR_NULL_PTR;
    }

    if (MCU_PIN_NOT_DEFINED <= gpio_cfg->mcu_pin)
    {
        return ASDK_GPIO_ERROR_INVALID_MCU_PIN;
    }

    stm32f4_gpio = &pin_map[gpio_cfg->mcu_pin];

    if (STM32F4_GPIO_PORT_MAX <= stm32f4_gpio->port)
    {
        return ASDK_GPIO_ERROR_INVALID_GPIO_PORT;
    }

    if (STM32F4_GPIO_PIN_MAX <= stm32f4_gpio->pin)
    {
        return ASDK_GPIO_ERROR_INVALID_GPIO_PIN;
    }

    /* initialize configuration parameters */

    GPIO_Type.Pin = (1U << stm32f4_gpio->pin);

    ret_value = set_mode_configuration(gpio_cfg->gpio_mode, &GPIO_Type);

    if (ASDK_GPIO_SUCCESS == ret_value)
    {
        ret_value = set_pull_configuration(gpio_cfg->gpio_pull, &GPIO_Type);
    }
    else
    {
        return ret_value;
    }

    /* init clock gating */
    __enable_gpio_clock(stm32f4_gpio->port);

    if (ASDK_GPIO_MODE_OUTPUT == gpio_cfg->gpio_mode)
    {
        /* assign initial state of GPIO output pin */
        if (ASDK_GPIO_STATE_INVALID <= gpio_cfg->gpio_init_state)
        {
            return ASDK_GPIO_ERROR_INVALID_STATE;
        }
        else
        {
        	HAL_GPIO_WritePin(gpio_port[stm32f4_gpio->port], (uint16_t)(1U << stm32f4_gpio->pin), (GPIO_PinState)gpio_cfg->gpio_init_state);
        }
    }

    if (ASDK_GPIO_SUCCESS == ret_value)
    {
        ret_value = set_speed_configuration(gpio_cfg->gpio_speed, &GPIO_Type);
    }
    else
    {
        return ret_value;
    }

    if (gpio_cfg->gpio_mode == ASDK_GPIO_MODE_INPUT)
    {
		if (ASDK_GPIO_SUCCESS == ret_value)
		{
			ret_value = set_isr(gpio_cfg, stm32f4_gpio->port, stm32f4_gpio->pin, &GPIO_Type);
		}
		else
		{
			return ret_value;
		}
    }

    if (ASDK_GPIO_SUCCESS == ret_value)
    {

        /* initialize pin as GPIO */
        HAL_GPIO_Init(gpio_port[stm32f4_gpio->port], &GPIO_Type);
    }

    return ret_value;
}

asdk_errorcode_t asdk_gpio_deinit(asdk_mcu_pin_t pin_num)
{
    const dal_pin_t *stm32f4_gpio = NULL;

    if (pin_num >= ASDK_STM32F411_PIN_MAX)
    {
        return ASDK_GPIO_ERROR_INVALID_MCU_PIN;
    }

    // derive actual PORT.PIN from MCU pin
    stm32f4_gpio = &pin_map[pin_num];

    // clear port for EXTI channel
    SYSCFG->EXTICR[pin_map[pin_num].pin/4] &= ~(0xFU << (pin_map[pin_num].pin%4));

    EXTI->IMR &= ~(1U << pin_map[pin_num].pin);

    if (STM32F4_GPIO_PORT_MAX <= stm32f4_gpio->port)
    {
        return ASDK_GPIO_ERROR_INVALID_GPIO_PORT;
    }

    if (STM32F4_GPIO_PIN_MAX <= stm32f4_gpio->pin)
    {
        return ASDK_GPIO_ERROR_INVALID_GPIO_PIN;
    }

    /* de-initialize pin */
    HAL_GPIO_DeInit(gpio_port[stm32f4_gpio->port], (1U << stm32f4_gpio->pin));


	EXTI->FTSR &= ~(1U << pin_map[pin_num].pin);
	EXTI->RTSR &= ~(1U << pin_map[pin_num].pin);
	EXTI->IMR &= ~(1U << pin_map[pin_num].pin);

    return ASDK_GPIO_SUCCESS;
}

asdk_errorcode_t asdk_gpio_output_toggle(asdk_mcu_pin_t pin_num)
{
    const dal_pin_t *stm32f4_gpio = NULL;

    if (ASDK_STM32F411_PIN_MAX <= pin_num)
    {
        return ASDK_GPIO_ERROR_INVALID_MCU_PIN;
    }

    stm32f4_gpio = &pin_map[pin_num];

    if (STM32F4_GPIO_PORT_MAX <= stm32f4_gpio->port)
    {
        return ASDK_GPIO_ERROR_INVALID_GPIO_PORT;
    }

    if (STM32F4_GPIO_PIN_MAX <= stm32f4_gpio->pin)
    {
        return ASDK_GPIO_ERROR_INVALID_GPIO_PIN;
    }

    HAL_GPIO_TogglePin(gpio_port[stm32f4_gpio->port], (uint16_t)(1U << stm32f4_gpio->pin));

    return ASDK_GPIO_SUCCESS;
}

static asdk_errorcode_t set_gpio_state(asdk_mcu_pin_t pin_num, asdk_gpio_state_t state)
{
    asdk_errorcode_t ret_value = ASDK_GPIO_SUCCESS;
    const dal_pin_t *stm32f4_gpio = NULL;

    if (ASDK_STM32F411_PIN_MAX <= pin_num)
    {
        return ASDK_GPIO_ERROR_INVALID_MCU_PIN;
    }

    stm32f4_gpio = &pin_map[pin_num];

    if (STM32F4_GPIO_PORT_MAX <= stm32f4_gpio->port)
    {
        return ASDK_GPIO_ERROR_INVALID_GPIO_PORT;
    }

    if (STM32F4_GPIO_PIN_MAX <= stm32f4_gpio->pin)
    {
        return ASDK_GPIO_ERROR_INVALID_GPIO_PIN;
    }

    HAL_GPIO_WritePin(gpio_port[stm32f4_gpio->port], (uint16_t)(1U << stm32f4_gpio->pin), (GPIO_PinState)state);

    return ret_value;
}

static asdk_errorcode_t get_gpio_state(asdk_mcu_pin_t pin_num, asdk_gpio_state_t *state, bool read_input_state)
{
    const dal_pin_t *stm32f4_gpio = NULL;

    if (ASDK_STM32F411_PIN_MAX <= pin_num)
    {
        return ASDK_GPIO_ERROR_INVALID_MCU_PIN;
    }

    stm32f4_gpio = &pin_map[pin_num];

    if (STM32F4_GPIO_PORT_MAX <= stm32f4_gpio->port)
    {
        return ASDK_GPIO_ERROR_INVALID_GPIO_PORT;
    }

    if (STM32F4_GPIO_PIN_MAX <= stm32f4_gpio->pin)
    {
        return ASDK_GPIO_ERROR_INVALID_GPIO_PIN;
    }

    *state = (asdk_gpio_state_t)HAL_GPIO_ReadPin(gpio_port[stm32f4_gpio->port], (uint16_t)(1U << stm32f4_gpio->pin));


    return ASDK_GPIO_SUCCESS;
}

static inline asdk_errorcode_t set_mode_configuration(asdk_gpio_mode_t gpio_mode, GPIO_InitTypeDef *GPIO_Type)
{
    asdk_errorcode_t ret_value = ASDK_GPIO_SUCCESS;

    switch (gpio_mode)
    {
    case ASDK_GPIO_MODE_INPUT:
    	GPIO_Type->Mode = GPIO_MODE_INPUT;
        break;

    case ASDK_GPIO_MODE_OUTPUT:
    	GPIO_Type->Mode = GPIO_MODE_OUTPUT_PP;
        break;

    /* error */
    default:
        ret_value = ASDK_GPIO_ERROR_INVALID_GPIO_MODE;
        break;
    }

    return ret_value;
}

static inline asdk_errorcode_t set_pull_configuration(asdk_gpio_pull_t gpio_pull, GPIO_InitTypeDef *GPIO_Type)
{
    asdk_errorcode_t ret_value = ASDK_GPIO_SUCCESS;

    switch (gpio_pull)
    {
    /* for GPIO as input */
    case ASDK_GPIO_HIGH_Z:
    	GPIO_Type->Pull = GPIO_NOPULL;
        break;

    /* for GPIO as output */
    case ASDK_GPIO_PUSH_PULL:
    	GPIO_Type->Pull = GPIO_NOPULL;
        break;

    /* for GPIO as input */
    case ASDK_GPIO_PULL_UP:
    	GPIO_Type->Pull = GPIO_PULLUP;
        break;

    case ASDK_GPIO_PULL_DOWN:
    	GPIO_Type->Pull = GPIO_PULLDOWN;
        break;

    /* error */
    default:
        ret_value = ASDK_GPIO_ERROR_INVALID_PULL_TYPE;
        break;
    }

    return ret_value;
}

static inline asdk_errorcode_t set_speed_configuration(asdk_gpio_speed_t gpio_speed, GPIO_InitTypeDef *GPIO_Type)
{
    asdk_errorcode_t ret_value = ASDK_GPIO_SUCCESS;

    switch (gpio_speed)
    {
    case ASDK_GPIO_SPEED_HIGH_FREQ:
    	GPIO_Type->Speed = GPIO_SPEED_FREQ_HIGH;
        break;

    case ASDK_GPIO_SPEED_LOW_FREQ:
    	GPIO_Type->Speed = GPIO_SPEED_FREQ_LOW;
        break;

    // TODO : THERE ARE MORE OPTIONS FROM ST

    /* error */
    default:
        ret_value = ASDK_GPIO_ERROR_INVALID_SPEED_TYPE;
    }

    return ret_value;
}

static inline asdk_errorcode_t set_isr(asdk_gpio_config_t *gpio_cfg, stm32f4_port_t port, stm32f4_pin_t pin, GPIO_InitTypeDef *GPIO_Type)
{
    asdk_errorcode_t ret_value = ASDK_GPIO_SUCCESS;
    uint8_t pin_idx = 0;
    uint8_t pin_num = 0;

    if (gpio_cfg->interrupt_config.priority > 15)
    {
    	return ASDK_GPIO_ERROR_INTERRUPT_PRIORITY_EXCEEDED;
    }

    pin_idx = pin/4;
    pin_num = pin%4;

    /* Configure Port of the source input */
	SYSCFG->EXTICR[pin_idx] &= ~(0xFU << pin_num);

	if (port == STM32F4_GPIO_PORT_H)
		SYSCFG->EXTICR[pin_idx] |= (0x7U << pin_num);
	else
		SYSCFG->EXTICR[pin_idx] |= (((uint16_t)port) << pin_num);

    switch (gpio_cfg->interrupt_config.type)
    {
    case ASDK_GPIO_INTERRUPT_DISABLED:
    	GPIO_Type->Mode = GPIO_MODE_INPUT;

    	EXTI->FTSR &= ~(1U << pin);
    	EXTI->RTSR &= ~(1U << pin);
    	EXTI->IMR &= ~(1U << pin);
        break;

    case ASDK_GPIO_INTERRUPT_RISING_EDGE:
        GPIO_Type->Mode = GPIO_MODE_IT_RISING;

    	EXTI->FTSR &= ~(1U << pin);
    	EXTI->RTSR |= (1U << pin);
    	EXTI->IMR |= (1U << pin);
        break;

    case ASDK_GPIO_INTERRUPT_FALLING_EDGE:
    	GPIO_Type->Mode = GPIO_MODE_IT_FALLING;

    	EXTI->FTSR |= (1U << pin);
    	EXTI->RTSR &= ~(1U << pin);
    	EXTI->IMR |= (1U << pin);
        break;

    case ASDK_GPIO_INTERRUPT_BOTH_EDGES:
    	GPIO_Type->Mode = GPIO_MODE_IT_RISING_FALLING;

    	EXTI->FTSR |= (1U << pin);
    	EXTI->RTSR |= (1U << pin);
    	EXTI->IMR |= (1U << pin);
        break;

    /* error */
    default:
        ret_value = ASDK_GPIO_ERROR_INVALID_INTERRUPT_TYPE;
        break;
    }

    if (pin <= STM32F4_GPIO_PIN_4)
    {
    	HAL_NVIC_SetPriority(EXTI0_IRQn + pin, gpio_cfg->interrupt_config.priority, 0);
    	HAL_NVIC_EnableIRQ(EXTI0_IRQn + pin);
    }
    else if (pin <= STM32F4_GPIO_PIN_9)
    {
    	HAL_NVIC_SetPriority(EXTI9_5_IRQn, gpio_cfg->interrupt_config.priority, 0);
    	HAL_NVIC_EnableIRQ(EXTI9_5_IRQn);
    }
    else
    {
    	HAL_NVIC_SetPriority(EXTI15_10_IRQn, gpio_cfg->interrupt_config.priority, 0);
    	HAL_NVIC_EnableIRQ(EXTI15_10_IRQn);
    }

    return ret_value;
}
