==> AtherEnergy/asdk/platform/Infineon/cyt2b75/dal/src/asdk_gpio.c <==
#include "asdk_platform.h"
#include "asdk_mcu_pins.h" // Defines MCU pins as is
#include "asdk_gpio.h"     // ASDK GPIO APIs
#include "cy_device_headers.h" // Defines reg. and variant of CYT2B7 series
#include "gpio/cy_gpio.h"      // CYT2B75 GPIO driver APIs
#include "sysint/cy_sysint.h"  // CYT2B75 system Interrupt APIs

asdk_errorcode_t asdk_gpio_init(asdk_gpio_config_t *gpio_cfg)
{
    // todo: check for GPIO module enabled (clock gating)
    // todo: perform static analysis

    asdk_errorcode_t ret_value = ASDK_GPIO_SUCCESS;
    const dal_pin_t *cyt2b75_gpio = NULL;
    cy_stc_gpio_pin_config_t cy_pin_cfg = {0};
    cy_en_gpio_status_t cy_gpio_init_status = CY_GPIO_SUCCESS;

    /* validate configuration parameters */

    if (NULL == gpio_cfg)
    {
        return ASDK_GPIO_ERROR_NULL_PTR;
    }

    if (MCU_PIN_NOT_DEFINED <= gpio_cfg->mcu_pin)
    {
        return ASDK_GPIO_ERROR_INVALID_MCU_PIN;
    }

    cyt2b75_gpio = &pin_map[gpio_cfg->mcu_pin];

    if (CYT2B75_GPIO_PORT_MAX <= cyt2b75_gpio->port)
    {
        return ASDK_GPIO_ERROR_INVALID_GPIO_PORT;
    }

    if (CYT2B75_GPIO_PIN_MAX <= cyt2b75_gpio->pin)
    {
        return ASDK_GPIO_ERROR_INVALID_GPIO_PIN;
    }

    /* initialize configuration parameters */

    ret_value = set_mode_configuration(gpio_cfg->gpio_mode, &cy_pin_cfg);

    if (ASDK_GPIO_SUCCESS == ret_value)
    {
        ret_value = set_pull_configuration(gpio_cfg->gpio_pull, &cy_pin_cfg);
    }
    else
    {
        return ret_value;
    }

    if (ASDK_GPIO_MODE_OUTPUT == gpio_cfg->gpio_mode)
    {
        /* assign initial state of GPIO output pin */
        if (ASDK_GPIO_STATE_INVALID <= gpio_cfg->gpio_init_state)
        {
            return ASDK_GPIO_ERROR_INVALID_STATE;
        }
        else
        {
            cy_pin_cfg.outVal = gpio_cfg->gpio_init_state;
        }
    }

    if (ASDK_GPIO_SUCCESS == ret_value)
    {
        ret_value = set_speed_configuration(gpio_cfg->gpio_speed, &cy_pin_cfg);
    }
    else
    {
        return ret_value;
    }

    if (ASDK_GPIO_SUCCESS == ret_value)
    {
        ret_value = set_isr(gpio_cfg, &cy_pin_cfg);
    }
    else
    {
        return ret_value;
    }

    if (ASDK_GPIO_SUCCESS == ret_value)
    {

        /* initialize pin as GPIO */
        cy_gpio_init_status = Cy_GPIO_Pin_Init(gpio_port[cyt2b75_gpio->port], cyt2b75_gpio->pin, &cy_pin_cfg);

        if (CY_GPIO_SUCCESS != cy_gpio_init_status)
        {
            ret_value = ASDK_GPIO_ERROR_INIT;
        }

        /* enable interrupt */
        if (gpio_cfg->interrupt_config.type != ASDK_GPIO_INTERRUPT_DISABLED)
        {
            NVIC_SetPriority(irq_cfg.intIdx, gpio_cfg->interrupt_config.priority);
            NVIC_EnableIRQ(irq_cfg.intIdx);
        }
    }

    return ret_value;
}

asdk_errorcode_t asdk_gpio_deinit(asdk_mcu_pin_t pin_num)
{
    uint32_t reg_value = 0;
    uint32_t pin_mask = 0;
    const dal_pin_t *cyt2b75_gpio = NULL;
    volatile stc_GPIO_PRT_t *cyt2b75_port_reg = NULL;

    if (pin_num >= ASDK_CYT2B75_PIN_MAX)
    {
        return ASDK_GPIO_ERROR_INVALID_MCU_PIN;
    }

    // derive actual PORT.PIN from MCU pin
    cyt2b75_gpio = &pin_map[pin_num];

    if (CYT2B75_GPIO_PORT_MAX <= cyt2b75_gpio->port)
    {
        return ASDK_GPIO_ERROR_INVALID_GPIO_PORT;
    }

    if (CYT2B75_GPIO_PIN_MAX <= cyt2b75_gpio->pin)
    {
        return ASDK_GPIO_ERROR_INVALID_GPIO_PIN;
    }

    /* clear the expected bit alone for a given pin number
       and update the GPIO Port registers */

    // clear interrupt configuration reg.
    Cy_GPIO_SetInterruptEdge(gpio_port[cyt2b75_gpio->port], cyt2b75_gpio->pin, 0);

    // clear interrupt mask reg.
    Cy_GPIO_SetInterruptMask(gpio_port[cyt2b75_gpio->port], cyt2b75_gpio->pin, 0);

    // clear out buffer reg.
    pin_mask = ~(1 << cyt2b75_gpio->pin); // clear the bit
    cyt2b75_port_reg = gpio_port[cyt2b75_gpio->port];
    reg_value = cyt2b75_port_reg->unOUT.u32Register & pin_mask;
    cyt2b75_port_reg->unOUT.u32Register = reg_value;

    // clear drive mode
    Cy_GPIO_SetDrivemode(gpio_port[cyt2b75_gpio->port], cyt2b75_gpio->pin, 0);

    // clear input buffer configuration register
    Cy_GPIO_SetVtrip(gpio_port[cyt2b75_gpio->port], cyt2b75_gpio->pin, 0);

    // clear slew rate configuration
    Cy_GPIO_SetSlewRate(gpio_port[cyt2b75_gpio->port], cyt2b75_gpio->pin, 0);

    // clear automotive configuration
    GPIO_SetVtripAuto(gpio_port[cyt2b75_gpio->port], cyt2b75_gpio->pin, 0);

    // clear alternate function selection regs.
    Cy_GPIO_SetHSIOM(gpio_port[cyt2b75_gpio->port], cyt2b75_gpio->pin, 0);

    return ASDK_GPIO_SUCCESS;
}

asdk_errorcode_t asdk_gpio_output_toggle(asdk_mcu_pin_t pin_num)
{
    const dal_pin_t *cyt2b75_gpio = NULL;

    if (ASDK_CYT2B75_PIN_MAX <= pin_num)
    {
        return ASDK_GPIO_ERROR_INVALID_MCU_PIN;
    }

    cyt2b75_gpio = &pin_map[pin_num];

    if (CYT2B75_GPIO_PORT_MAX <= cyt2b75_gpio->port)
    {
        return ASDK_GPIO_ERROR_INVALID_GPIO_PORT;
    }

    if (CYT2B75_GPIO_PIN_MAX <= cyt2b75_gpio->pin)
    {
        return ASDK_GPIO_ERROR_INVALID_GPIO_PIN;
    }

    Cy_GPIO_Inv(gpio_port[cyt2b75_gpio->port], cyt2b75_gpio->pin);

    return ASDK_GPIO_SUCCESS;
}

static asdk_errorcode_t set_gpio_state(asdk_mcu_pin_t pin_num, asdk_gpio_state_t state)
{
    asdk_errorcode_t ret_value = ASDK_GPIO_SUCCESS;
    const dal_pin_t *cyt2b75_gpio = NULL;

    if (ASDK_CYT2B75_PIN_MAX <= pin_num)
    {
        return ASDK_GPIO_ERROR_INVALID_MCU_PIN;
    }

    cyt2b75_gpio = &pin_map[pin_num];

    if (CYT2B75_GPIO_PORT_MAX <= cyt2b75_gpio->port)
    {
        return ASDK_GPIO_ERROR_INVALID_GPIO_PORT;
    }

    if (CYT2B75_GPIO_PIN_MAX <= cyt2b75_gpio->pin)
    {
        return ASDK_GPIO_ERROR_INVALID_GPIO_PIN;
    }

    Cy_GPIO_Write(gpio_port[cyt2b75_gpio->port], cyt2b75_gpio->pin, state);

    return ret_value;
}

static asdk_errorcode_t get_gpio_state(asdk_mcu_pin_t pin_num, asdk_gpio_state_t *state, bool read_input_state)
{
    const dal_pin_t *cyt2b75_gpio = NULL;

    if (ASDK_CYT2B75_PIN_MAX <= pin_num)
    {
        return ASDK_GPIO_ERROR_INVALID_MCU_PIN;
    }

    cyt2b75_gpio = &pin_map[pin_num];

    if (CYT2B75_GPIO_PORT_MAX <= cyt2b75_gpio->port)
    {
        return ASDK_GPIO_ERROR_INVALID_GPIO_PORT;
    }

    if (CYT2B75_GPIO_PIN_MAX <= cyt2b75_gpio->pin)
    {
        return ASDK_GPIO_ERROR_INVALID_GPIO_PIN;
    }

    if (read_input_state)
    {
        *state = (asdk_gpio_state_t)Cy_GPIO_Read(gpio_port[cyt2b75_gpio->port], cyt2b75_gpio->pin);
    }
    else
    {
        *state = (asdk_gpio_state_t)Cy_GPIO_ReadOut(gpio_port[cyt2b75_gpio->port], cyt2b75_gpio->pin);
    }

    return ASDK_GPIO_SUCCESS;
}

static inline asdk_errorcode_t set_mode_configuration(asdk_gpio_mode_t gpio_mode, cy_stc_gpio_pin_config_t *cy_config_out)
{
    asdk_errorcode_t ret_value = ASDK_GPIO_SUCCESS;

    switch (gpio_mode)
    {
    case ASDK_GPIO_MODE_INPUT:
    case ASDK_GPIO_MODE_OUTPUT:
        cy_config_out->hsiom = 0; // use as GPIO
        break;

    /* error */
    default:
        ret_value = ASDK_GPIO_ERROR_INVALID_GPIO_MODE;
        break;
    }

    return ret_value;
}

static inline asdk_errorcode_t set_pull_configuration(asdk_gpio_pull_t gpio_pull, cy_stc_gpio_pin_config_t *cy_config_out)
{
    asdk_errorcode_t ret_value = ASDK_GPIO_SUCCESS;

    switch (gpio_pull)
    {
    case ASDK_GPIO_HIGH_Z:
        cy_config_out->driveMode = CY_GPIO_DM_HIGHZ;
        break;

    /* for GPIO as output */
    case ASDK_GPIO_PUSH_PULL:
        cy_config_out->driveMode = CY_GPIO_DM_STRONG_IN_OFF;
        break;

    /* for GPIO as input */
    case ASDK_GPIO_PULL_UP:
        cy_config_out->driveMode = CY_GPIO_DM_PULLUP;
        cy_config_out->outVal = 1;
        break;

    case ASDK_GPIO_PULL_DOWN:
        cy_config_out->driveMode = CY_GPIO_DM_PULLDOWN;
        break;

    /* error */
    default:
        ret_value = ASDK_GPIO_ERROR_INVALID_PULL_TYPE;
        break;
    }

    // if (ASDK_GPIO_SUCCESS == ret_value)
    // {
    //     cy_config_out->outVal = 1;
    // }

    return ret_value;
}

static inline asdk_errorcode_t set_speed_configuration(asdk_gpio_speed_t gpio_speed, cy_stc_gpio_pin_config_t *cy_config_out)
{
    asdk_errorcode_t ret_value = ASDK_GPIO_SUCCESS;

    switch (gpio_speed)
    {
    case ASDK_GPIO_SPEED_HIGH_FREQ:
        cy_config_out->slewRate = CY_GPIO_SLEW_FAST;
        break;

    case ASDK_GPIO_SPEED_LOW_FREQ:
        cy_config_out->slewRate = CY_GPIO_SLEW_SLOW;
        break;

    /* error */
    default:
        ret_value = ASDK_GPIO_ERROR_INVALID_SPEED_TYPE;
    }

    return ret_value;
}

static inline asdk_errorcode_t set_isr(asdk_gpio_config_t *gpio_cfg, cy_stc_gpio_pin_config_t *cy_config_out)
{
    asdk_errorcode_t ret_value = ASDK_GPIO_SUCCESS;

    switch (gpio_cfg->interrupt_config.type)
    {
    case ASDK_GPIO_INTERRUPT_DISABLED:
        cy_config_out->intEdge = CY_GPIO_INTR_DISABLE;
        break;

    case ASDK_GPIO_INTERRUPT_RISING_EDGE:
        cy_config_out->intEdge = CY_GPIO_INTR_RISING;
        break;

    case ASDK_GPIO_INTERRUPT_FALLING_EDGE:
        cy_config_out->intEdge = CY_GPIO_INTR_FALLING;
        break;

    case ASDK_GPIO_INTERRUPT_BOTH_EDGES:
        cy_config_out->intEdge = CY_GPIO_INTR_BOTH;
        break;

    /* error */
    default:
        ret_value = ASDK_GPIO_ERROR_INVALID_INTERRUPT_TYPE;
        break;
    }

    /* interrupt forwarding enabled */
    if ((ASDK_GPIO_SUCCESS == ret_value) &&
        (ASDK_GPIO_INTERRUPT_DISABLED != gpio_cfg->interrupt_config.type))
    {
        cy_config_out->intMask = 1;

        switch (pin_map[gpio_cfg->mcu_pin].port)
        {
        case CYT2B75_GPIO_PORT_0:
            irq_cfg.sysIntSrc = ioss_interrupts_gpio_0_IRQn;
            Cy_SysInt_InitIRQ(&irq_cfg);
            Cy_SysInt_SetSystemIrqVector(irq_cfg.sysIntSrc, port0_isr);
            break;

        case CYT2B75_GPIO_PORT_2:
            irq_cfg.sysIntSrc = ioss_interrupts_gpio_2_IRQn;
            Cy_SysInt_InitIRQ(&irq_cfg);
            Cy_SysInt_SetSystemIrqVector(irq_cfg.sysIntSrc, port2_isr);
            break;

        case CYT2B75_GPIO_PORT_3:
            irq_cfg.sysIntSrc = ioss_interrupts_gpio_3_IRQn;
            Cy_SysInt_InitIRQ(&irq_cfg);
            Cy_SysInt_SetSystemIrqVector(irq_cfg.sysIntSrc, port3_isr);
            break;

        case CYT2B75_GPIO_PORT_5:
            irq_cfg.sysIntSrc = ioss_interrupts_gpio_5_IRQn;
            Cy_SysInt_InitIRQ(&irq_cfg);
            Cy_SysInt_SetSystemIrqVector(irq_cfg.sysIntSrc, port5_isr);
            break;

        case CYT2B75_GPIO_PORT_6:
            irq_cfg.sysIntSrc = ioss_interrupts_gpio_6_IRQn;
            Cy_SysInt_InitIRQ(&irq_cfg);
            Cy_SysInt_SetSystemIrqVector(irq_cfg.sysIntSrc, port6_isr);
            break;

        case CYT2B75_GPIO_PORT_7:
            irq_cfg.sysIntSrc = ioss_interrupts_gpio_7_IRQn;
            Cy_SysInt_InitIRQ(&irq_cfg);
            Cy_SysInt_SetSystemIrqVector(irq_cfg.sysIntSrc, port7_isr);
            break;

        case CYT2B75_GPIO_PORT_8:
            irq_cfg.sysIntSrc = ioss_interrupts_gpio_8_IRQn;
            Cy_SysInt_InitIRQ(&irq_cfg);
            Cy_SysInt_SetSystemIrqVector(irq_cfg.sysIntSrc, port8_isr);
            break;

        case CYT2B75_GPIO_PORT_11:
            irq_cfg.sysIntSrc = ioss_interrupts_gpio_11_IRQn;
            Cy_SysInt_InitIRQ(&irq_cfg);
            Cy_SysInt_SetSystemIrqVector(irq_cfg.sysIntSrc, port11_isr);
            break;

        case CYT2B75_GPIO_PORT_12:
            irq_cfg.sysIntSrc = ioss_interrupts_gpio_12_IRQn;
            Cy_SysInt_InitIRQ(&irq_cfg);
            Cy_SysInt_SetSystemIrqVector(irq_cfg.sysIntSrc, port12_isr);
            break;

        case CYT2B75_GPIO_PORT_13:
            irq_cfg.sysIntSrc = ioss_interrupts_gpio_13_IRQn;
            Cy_SysInt_InitIRQ(&irq_cfg);
            Cy_SysInt_SetSystemIrqVector(irq_cfg.sysIntSrc, port13_isr);
            break;

        case CYT2B75_GPIO_PORT_14:
            irq_cfg.sysIntSrc = ioss_interrupts_gpio_14_IRQn;
            Cy_SysInt_InitIRQ(&irq_cfg);
            Cy_SysInt_SetSystemIrqVector(irq_cfg.sysIntSrc, port14_isr);
            break;

        case CYT2B75_GPIO_PORT_17:
            irq_cfg.sysIntSrc = ioss_interrupts_gpio_17_IRQn;
            Cy_SysInt_InitIRQ(&irq_cfg);
            Cy_SysInt_SetSystemIrqVector(irq_cfg.sysIntSrc, port17_isr);
            break;

        case CYT2B75_GPIO_PORT_18:
            irq_cfg.sysIntSrc = ioss_interrupts_gpio_18_IRQn;
            Cy_SysInt_InitIRQ(&irq_cfg);
            Cy_SysInt_SetSystemIrqVector(irq_cfg.sysIntSrc, port18_isr);
            break;

        case CYT2B75_GPIO_PORT_19:
            irq_cfg.sysIntSrc = ioss_interrupts_gpio_19_IRQn;
            Cy_SysInt_InitIRQ(&irq_cfg);
            Cy_SysInt_SetSystemIrqVector(irq_cfg.sysIntSrc, port19_isr);
            break;

        case CYT2B75_GPIO_PORT_21:
            irq_cfg.sysIntSrc = ioss_interrupts_gpio_21_IRQn;
            Cy_SysInt_InitIRQ(&irq_cfg);
            Cy_SysInt_SetSystemIrqVector(irq_cfg.sysIntSrc, port21_isr);
            break;

        case CYT2B75_GPIO_PORT_22:
            irq_cfg.sysIntSrc = ioss_interrupts_gpio_22_IRQn;
            Cy_SysInt_InitIRQ(&irq_cfg);
            Cy_SysInt_SetSystemIrqVector(irq_cfg.sysIntSrc, port22_isr);
            break;

        case CYT2B75_GPIO_PORT_23:
            irq_cfg.sysIntSrc = ioss_interrupts_gpio_23_IRQn;
            Cy_SysInt_InitIRQ(&irq_cfg);
            Cy_SysInt_SetSystemIrqVector(irq_cfg.sysIntSrc, port23_isr);
            break;

        default:
            ret_value = ASDK_GPIO_ERROR_INVALID_GPIO_PORT;
            break;
        }
    }

    return ret_value;
}
